# ppt-auto-capture-gui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml  release.yml
src/: app.rs  config.rs  i18n.rs  main.rs
src/capture/: capture_source.rs  capture_state.rs  capture_worker.rs  mod.rs
src/detection/: black_frame_detector.rs  change_detector.rs  duplicate_detector.rs  mod.rs  stability_detector.rs
src/gui/: dashboard.rs  display_panel.rs  mod.rs  output_panel.rs  preview_panel.rs  settings_panel.rs  source_panel.rs
src/model/: frame.rs  mod.rs  monitor_info.rs  region.rs  slide_record.rs  window_info.rs
src/pptx/: content_types.rs  mod.rs  pptx_writer.rs  rels_xml.rs  slide_xml.rs
src/storage/: atomic_file.rs  image_store.rs  manifest_store.rs  mod.rs  recovery.rs
src/windows/: dxgi_capture.rs  gdi_capture.rs  mod.rs  monitor.rs  session_events.rs  stub.rs  window_locator.rs  window_mover.rs
