[package]
name = "ppt-auto-capture-gui"
version = "0.1.0"
edition = "2021"
description = "Automatic PowerPoint slide capture tool with GUI"
authors = ["ppt-capture"]

[profile.release]
opt-level = 2
lto = true
strip = true

[dependencies]
eframe = "0.31"
egui = "0.31"
egui-wgpu = "0.31"

# Image handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File handling
zip = "2"
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
crossbeam-channel = "0.5"

# Error handling
anyhow = "1"
thiserror = "2"

# UUID for slide IDs
uuid = { version = "1", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Base64 image data URIs for preview
base64 = "0.22"

# Hashing for duplicate detection
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]

[dev-dependencies]
tempfile = "3"
