[package]
name = "ppt-auto-capture-gui"
version = "0.1.0"
edition = "2021"
description = "Automatic PowerPoint slide capture tool with GUI"
authors = ["ppt-capture"]

[profile.release]
opt-level = 2
lto = true
strip = true

[dependencies]
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"

# windows 0.60 — needed on all platforms for consistent feature resolution
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_RemoteDesktop",
] }

[dev-dependencies]
tempfile = "3"
